# shelf

./: .env.example  .gitignore  AGENT_REACH_INSTAGRAM.md  AGENT_REACH_X.md  Makefile  README.md  pyproject.toml
data/: instagram_posts.example.csv  instagram_retrieval_queries.example.csv  retrieval_queries.csv  retrieval_queries.example.csv  urls.csv  urls.example.csv  x_posts.example.csv
evidence/: items.jsonl  output.json  traces.jsonl
evidence/compare-latest/: comparison.json  comparison.md  config.json  traces.jsonl
evidence/compare-latest/deterministic/: items.jsonl
evidence/compare-latest/raw/gym_web_1/: web_raw_limited.html  (+1 more)
evidence/instagram-live/: items.jsonl  traces.jsonl
shelf/: __init__.py  cli.py  config.py  decision_policy.py  models.py  orchestrator.py  trace.py
shelf/analysis/: __init__.py  base.py  categories.py  compare.py  deterministic.py  evaluate.py  openai_provider.py
shelf/extractors/: __init__.py  agent_reach.py  base.py  instagram.py  opencli.py  public_metadata.py  unsupported.py  webpage.py  x.py  youtube.py
shelf/organization/: __init__.py  organizer.py
shelf/retrieval/: evaluate.py  index.py
shelf/storage/: sqlite_store.py
tests/: test_analysis_evaluation.py  test_compare.py  test_decision_policy.py  test_instagram_extractor.py  test_openrouter_analyzer.py  test_organization.py  test_pipeline_progress.py  test_retrieval_metrics.py  test_validation.py  test_webpage_mapping.py  test_x_extractor.py  test_youtube_mapping.py
tests/fixtures/: instagram_post_markdown.txt  sample_subtitles.vtt  webpage.html  youtube_info.json
(+45 files in other folders)
