[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelf"
version = "0.1.0"
description = "Checkpoint 1 MVP for Shelf, an intelligent saved content system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "httpx>=0.27",
  "trafilatura>=1.8",
  "yt-dlp>=2024.4.9",
  "scikit-learn>=1.4",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
agent-reach = [
  "agent-reach @ https://github.com/Panniantong/Agent-Reach/archive/main.zip",
]
openai = [
  "openai>=1.40",
]

[project.scripts]
shelf = "shelf.cli:app"

[tool.setuptools.packages.find]
include = ["shelf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: opt-in tests that perform live network extraction",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
